--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(lio_sam)
-
+project(radar_sam)
+#set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_BUILD_TYPE "Release")
+
 set(CMAKE_CXX_FLAGS "-std=c++11")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g -pthread")
 
