--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>lio_sam</name>
+  <name>radar_sam</name>
   <version>1.0.0</version>
   <description>Lidar Odometry</description>
 
