--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(radar_sam)
 set(CMAKE_BUILD_TYPE "Release")
 
 # set(CMAKE_CXX_FLAGS "-std=c++14")
-set(CMAKE_CXX_STANDARD 14)
-# set(CMAKE_CXX_FLAGS "-std=c++11") //default
+# set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_FLAGS "-std=c++11") //default
 
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g -pthread")
 
@@ -98,7 +98,6 @@ target_link_libraries(${PROJECT_NAME}_featureExtraction ${catkin_LIBRARIES} ${PC
 # Mapping Optimization
 add_executable(${PROJECT_NAME}_mapOptmization 
   src/mapOptmization.cpp
-  src/Scancontext.cpp
 )
 add_dependencies(${PROJECT_NAME}_mapOptmization ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_generate_messages_cpp)
 # target_compile_options(${PROJECT_NAME}_mapOptmization PRIVATE c++_std_14)
