--- a/config/params.yaml
+++ b/config/params.yaml
@@ -23,7 +23,7 @@ radar_sam:
   savePCDDirectory: "/home/gpal/Lio_sam/Radar_SAM/src/Radar_SAM/resultSave/"        # in your home folder, starts and ends with "/". Warning: the code deletes "LOAM" folder then recreates it. See "mapOptimization" for implementation
 
   # Sensor Settings
-  sensor: velodyne                            # lidar sensor type, either 'velodyne' or 'ouster'
+  sensor: gpal4d                            # radar sensor type, either 'gpal4d' or '...'
   N_SCAN: 16                                  # number of lidar channel (i.e., 16, 32, 64, 128)
   Radar_target_number: 2000  
   Horizon_SCAN: 1800                          # lidar horizontal resolution (Velodyne:1800, Ouster:512,1024,2048)
