--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,3 +114,7 @@ target_link_libraries(${PROJECT_NAME}_mapOptmization ${catkin_LIBRARIES} ${PCL_L
 # IMU Preintegration
 add_executable(${PROJECT_NAME}_imuPreintegration src/imuPreintegration.cpp)
 target_link_libraries(${PROJECT_NAME}_imuPreintegration ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${OpenCV_LIBRARIES} gtsam)
+
+# Map projection 2 gridmap
+add_executable(${PROJECT_NAME}_mapProjection src/mapProjection.cpp)
+target_link_libraries(${PROJECT_NAME}_mapProjection ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${OpenCV_LIBRARIES} gtsam)
